--- a/src/styles/base/layout.scss
+++ b/src/styles/base/layout.scss
@@ -20,8 +20,8 @@ body {
     padding: 0 $spacing__l $spacing__l;
   }
 
-  background: black;
-  color: white !important;
+  background: $color__background;
+  color: $color__text;
   min-height: 100%;
   height: 100%;
 }
@@ -54,4 +54,29 @@ html {
 main {
   max-width: $layout__max-width;
   margin: $spacing__l auto;
+}
+
+// Reusable Grids
+// --------------------
+
+.grid__one-by-two {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: auto;
+  grid-column-gap: $spacing__l;
+  grid-row-gap: $spacing__l;
+  @include breakpoint("m") {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+.grid__one-by-three {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: auto;
+  grid-column-gap: $spacing__l;
+  grid-row-gap: $spacing__l;
+  @include breakpoint("m") {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
 }
