secondary nav, styled, not functioning

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -1,9 +1,10 @@
 @import "base/reset";
+@import "base/helper-classes";
 @import "base/layout";
 @import "base/typography";
-@import "base/helper-classes";
 @import "components/button";
 @import "components/header";
+@import "components/secondary-nav";
 @import "components/footer";
 @import "components/trust-bar";
 @import "pages/home/hero";
