--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -46,13 +46,13 @@ $font-size__text: 1rem;
 $font-size__text__code: 0.9rem;
 $font-size__small: 0.933rem;
 
-$header-font-size__xxs: 1.333rem; // H6
-$header-font-size__xs: 1.6rem; // H5
-$header-font-size__s: 1.867rem; // H4
-$header-font-size__m: 2.533rem; // H3
-$header-font-size__l: 3.067rem; // H2
-$header-font-size__xl: 3.467rem; // H1
-$header-font-size__xxl: 4rem; // Hero headline
+$headline-font-size__xxs: 1.333rem; // H6
+$headline-font-size__xs: 1.6rem; // H5
+$headline-font-size__s: 1.867rem; // H4
+$headline-font-size__m: 2.533rem; // H3
+$headline-font-size__l: 3.067rem; // H2
+$headline-font-size__xl: 3.467rem; // H1
+$headline-font-size__xxl: 4rem; // Hero headline
 
 // Font Families
 // ------------------------------------------------
@@ -72,8 +72,8 @@ $spacing__s: $spacing__base; // 8px
 $spacing__m: calc($spacing__base * 2); // 16px
 $spacing__l: calc($spacing__base * 3); // 24px
 $spacing__xl: calc($spacing__base * 4); // 32px
-$spacing__xxl: calc($spacing__base * 5); // 40px
-$spacing__xxxl: calc($spacing__base * 6); // 48px
+$spacing__xxl: calc($spacing__base * 8); // 64px
+$spacing__xxxl: calc($spacing__base * 10); // 80px
 
 // Breakpoints
 // ------------------------------------------------
