more whitespace on mobile

--- a/src/styles/base/layout.scss
+++ b/src/styles/base/layout.scss
@@ -53,13 +53,13 @@ main {
 
 .full-width {
   width: 100%;
-  padding: 0 $spacing__l;
+  padding: 0 $spacing__xl;
 }
 
 .limited-width {
   max-width: $layout__max-width;
   margin: 0 auto;
-  padding: 0 $spacing__l;
+  padding: 0 $spacing__xl;
 }
 
 // Reusable Grids
