--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -27,7 +27,7 @@
 
 .header__nav {
   width: 100%;
-  padding: $spacing__l 0;
+  padding: $spacing__l 0 $spacing__xl 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
