matching css structure to components

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -8,6 +8,7 @@
 @import "components/footer";
 @import "components/trust-bar";
 @import "pages/home/hero";
+@import "pages/home/top-names";
 
 // CSS Instructions
 // ------------------------------------------------
