--- a/src/styles/pages/home/hero.scss
+++ b/src/styles/pages/home/hero.scss
@@ -48,7 +48,7 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(2, 1fr);
-  grid-gap: 2px;
+  grid-gap: 2px; // Not basing this off of font size since this is the smallest and the largest it should ever get.
   align-items: center;
   justify-items: center;
 
@@ -79,39 +79,5 @@
   background: $color__n-90;
   p {
     margin: 0;
-  }
-}
-
-.hero__top-auditors {
-  margin-top: $spacing__xl;
-  padding: $spacing__l 0;
-  background: $color__n-90;
-
-  @include breakpoint("s") {
-    margin-top: $spacing__xxxl;
-  }
-  ul {
-    margin: $spacing__xl 0 0;
-    padding: 0;
-    list-style: none;
-
-    li {
-      font-size: $font-size__copy;
-      color: $color__n-5;
-      margin: 0 $spacing__xs $spacing__xs 0;
-      display: inline-block;
-      background: $color__n-80;
-      padding: $spacing__s $spacing__m;
-      border-radius: $border-radius__m;
-
-      @include breakpoint("s") {
-        font-size: $headline-font-size__xxs;
-        margin: 0 $spacing__s $spacing__s 0;
-      }
-
-      &:last-of-type {
-        // background: none;
-      }
-    }
   }
 }
