--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -7,8 +7,10 @@
 @import "components/secondary-nav";
 @import "components/footer";
 @import "components/trust-bar";
+@import "components/contest-tile";
 @import "pages/home/hero";
 @import "pages/home/top-names";
+@import "pages/home/featured-contests";
 
 // CSS Instructions
 // ------------------------------------------------
@@ -27,11 +29,56 @@
 // --------------------
 
 // 1. Variables
+
 // 2. Box model properties
+//    - margin
+//    - padding
+//    - width
+//    - height
+
 // 3. Display and position
+//    - display
+//    - position
+//    - top
+//    - right
+//    - bottom
+//    - left
+//    - z-index
+
 // 4. Background
+//    - background
+//    - background-color
+//    - background-image
+//    - background-repeat
+//    - background-position
+//    - background-size
+
 // 5. Border
+//    - border
+//    - border-radius
+//    - outline
+
 // 6. Box shadow
+
 // 7. Text
+//    - font
+//    - font-family
+//    - font-size
+//    - font-weight
+//    - line-height
+//    - text-align
+//    - text-decoration
+//    - text-transform
+//    - text-indent
+//    - text-shadow
+//    - color
+
 // 8. Transforms
+//    - transition
+//    - animation
+
 // 9. Other
+//    - cursor
+//    - opacity
+//    - visibility
+//    - overflow
