--- a/src/styles/base/helper-classes.scss
+++ b/src/styles/base/helper-classes.scss
@@ -35,3 +35,12 @@
   white-space: normal;
   width: auto;
 }
+
+// Typography and button children will automatically swap to white with this class
+// TODO: Move these somewhere more appropriate.
+.background--blurple {
+  background: $color__c4-button-blurple;
+}
+// .background--low-contrast {
+//  // Document me somewhere, but this doesn't need any special treatment. It does the same thing as the blurple background class, only without the blurple. We could use it when the background is busy.
+// }
