toggling views works now thanks to a certain mango

--- a/src/styles/components/secondary-nav.scss
+++ b/src/styles/components/secondary-nav.scss
@@ -10,7 +10,7 @@
   margin-bottom: $spacing__m;
 }
 
-a.secondary-nav__item {
+button.secondary-nav__item {
   margin-right: $spacing__s;
   padding: $spacing__s $spacing__m;
 
