--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -48,7 +48,7 @@
     display: block;
     width: 100%;
     &:hover {
-      color: $color__c4-button-blurple;
+      color: $color__button-blurple;
     }
   }
 }
