--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,29 +1,39 @@
 // Colors
 // ------------------------------------------------
 
-// Brand colors
-$color__c4-button-blurple: #714aeb;
-$color__c4-logo-blurple: #8963ff;
-$color__blurple-text-light: #a78aff;
-$color__sponsor-color: rgb(64, 127, 203);
-
 // Black and white
-$color__white: rgba(255, 255, 255, 1);
-$color__black: rgba(2, 2, 3, 1);
+$color__white: hsl(0, 0%, 100%);
+$color__black: hsl(240, 20%, 1%);
 
 // Neutral palette
-$color__n-100: rgba(11, 10, 13, 1);
-$color__n-90: rgba(29, 27, 38, 1);
-$color__n-80: rgba(46, 43, 59, 1);
-$color__n-70: rgba(49, 46, 64, 1);
-$color__n-60: rgba(64, 61, 77, 1);
-$color__n-50: rgba(75, 71, 89, 1);
-$color__n-40: rgba(86, 82, 102, 1);
-$color__n-30: rgba(107, 102, 128, 1);
-$color__n-20: rgba(141, 138, 153, 1);
-$color__n-10: rgba(173, 171, 178, 1);
-$color__n-5: rgba(196, 194, 204, 1);
-$color__n-2: rgba(230, 230, 230, 1);
+$color__n-100: hsl(260, 13%, 4.5%);
+$color__n-90: hsl(251, 16.9%, 12.7%);
+$color__n-80: hsl(251, 15.7%, 20%);
+$color__n-70: hsl(250, 16.4%, 21.6%);
+$color__n-60: hsl(251, 11.6%, 27.1%);
+$color__n-50: hsl(253, 11.2%, 31.4%);
+$color__n-40: hsl(252, 10.9%, 36.1%);
+$color__n-30: hsl(252, 11.3%, 45.1%);
+$color__n-20: hsl(252, 6.8%, 57.1%);
+$color__n-10: hsl(257, 4.3%, 68.4%);
+$color__n-5: hsl(252, 8.9%, 78%);
+$color__n-2: hsl(0, 0%, 90.2%);
+
+// Blurple palette
+$color__blurple-text: hsl(255, 100%, 69.4%);
+$color__blurple-text-light: hsl(255, 100%, 77.1%);
+$color__blurple-90: hsl(255, 80.1%, 60.6%);
+$color__blurple-80: hsl(255, 57.9%, 52.5%);
+$color__blurple-70: hsl(255, 52.1%, 45.9%);
+$color__blurple-60: hsl(255, 52.2%, 39.4%);
+$color__blurple-50: hsl(254, 52.4%, 32.9%);
+$color__blurple-40: hsl(255, 52.2%, 26.3%);
+
+// Brand colors
+$color__button-blurple: $color__blurple-90;
+$color__button-blurple--hover: #8963ff;
+$color__sponsor-color: rgb(64, 127, 203);
+// $color__sponsor-color: rgba(63,82,238,1);
 
 // Color Defaults
 // ------------------------------------------------
