--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -6,7 +6,7 @@ $color__white: hsl(0, 0%, 100%);
 $color__black: hsl(240, 20%, 1%);
 
 // Neutral palette
-$color__n-100: hsl(260, 13%, 4.5%);
+$color__n-100: hsl(260, 13%, 5%);
 $color__n-90: hsl(251, 16.9%, 12.7%);
 $color__n-80: hsl(251, 15.7%, 20%);
 $color__n-70: hsl(250, 16.4%, 21.6%);
@@ -28,6 +28,9 @@ $color__blurple-70: hsl(255, 52.1%, 45.9%);
 $color__blurple-60: hsl(255, 52.2%, 39.4%);
 $color__blurple-50: hsl(254, 52.4%, 32.9%);
 $color__blurple-40: hsl(255, 52.2%, 26.3%);
+
+// Green palette
+$color__green: hsl(144, 58%, 59%);
 
 // Brand colors
 $color__button-blurple: $color__blurple-90;
